[package]
name = "minidecoder"
version = "0.1.0"
edition = "2021"

[features]
stats = []
stress = []

[lib]
name = "minidecoder"
path = "src/lib.rs"

[[bin]]
name = "minidecoder"
path = "src/main.rs"

[[bin]]
name = "o3yv-stress"
path = "src/bin/o3yv-stress.rs"
required-features = ["stress"]

[dependencies]
image = { version = "0.25.0", default-features = false, features = ["png"] }
